[package]
name = "dct-nft-marketplace-wasm"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.dct-nft-marketplace]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.11.3"

[workspace]
members = ["."]
